unpackaged/main/default/objects/API_Connector__Risk_Datablock_Input_Setting__c/API_Connector__Risk_Datablock_Input_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to store Risk Datablock service information</description>
    <label>Risk Datablock Input Setting</label>
</CustomObject>