unpackaged/main/default/objects/API_Connector__Risk_Datablock_Input_Setting__c/fields/API_Connector__Input_Setting_Mapping__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Input_Setting_Mapping__c</fullName>
    <label>Input_Setting_Mapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>