unpackaged/main/default/objects/API_Connector__Risk_Datablock_Input_Setting__c/fields/API_Connector__isOnlyRecommended__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__isOnlyRecommended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isOnlyRecommended</label>
    <type>Checkbox</type>
</CustomField>