unpackaged/main/default/objects/API_Connector__Risk_Datablock_Input_Setting__c/fields/API_Connector__orderReason__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__orderReason__c</fullName>
    <label>orderReason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>